--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
     "axios": "^1.6.0",
     "chart.js": "^4.5.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^10.16.4",
+    "isomorphic-dompurify": "^2.3.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.292.0",
+    "marked": "^11.1.1",
     "next": "^14.2.33",
     "postcss": "^8.4.31",
     "react": "^18",
@@ -35,6 +38,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "raw-loader": "^4.0.2",
+    "style-loader": "^3.3.3"
   }
 }
